k8s/test-cluster/test-2/deploy-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mock-api
    version: v1
    env: test
  name: mock-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mock-api
  template:
    metadata:
      labels:
        app: mock-api
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: config
        configMap:
          name: mock-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mock-api
  name: mock-api-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: mock-api
  type: ClusterIP
